--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="shortcut icon" type="image/x-icon" href="/icon/grid.png" />
   <title>AegisLenz</title>
 </head>
 
